<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:id="@+id/img_no_internet"
        ></ImageView>


    <fontspackageForTextView.BoldExtra
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="17dp"
        android:text="@string/no_network"

        ></fontspackageForTextView.BoldExtra>


    <fontspackageForTextView.Regular
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:alpha=".7"
        android:textSize="15dp"
        android:text="@string/no_network_detail"
        ></fontspackageForTextView.Regular>

     <fontspackageForTextView.BoldExtra
         android:id="@+id/txt_ok"
         android:layout_marginBottom="20dp"
         android:text="@string/ok"
         android:textSize="16dp"
         android:gravity="center"
         android:layout_marginRight="20dp"
         android:layout_gravity="right"
         android:layout_width="35dp"
         android:layout_height="30dp"
         android:textColor="@color/black"
         ></fontspackageForTextView.BoldExtra>


</LinearLayout>